--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -13,6 +13,7 @@
           <ul class="dropdown-menu">
             <li><%= link_to  "Create", new_profile_path, class: "dropdown-item" %></li>
             <li><a class="dropdown-item" href="#">ReScan</a></li>
+            <li><%= link_to  "All Profiles", profiles_path, class: "dropdown-item" %></li>
           </ul>
         </li>
       </ul>
