Refact CSS from _form profile

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -11,22 +11,20 @@
     </div>
   <% end %>
 
-  <div>
-    <div class="input-group mb-3">
-      <span class="input-group-text" id="basic-addon1">Name</span>
-      <%= form.text_field :name, placeholder: "Name", class: "form-control" %>
-    </div>
-
+  <div class="input-group mb-3">
+    <span class="input-group-text" id="basic-addon1">Name</span>
+    <%= form.text_field :name, placeholder: "Name", class: "form-control" %>
   </div>
 
   <div>
-    <div class="mb-3">
-      <label for="basic-url" class="form-label">Your GitHub URL</label>
+    <label for="basic-url" class="form-label">Your GitHub URL</label>
     <div class="input-group">
       <span class="input-group-text" id="basic-addon3">https://github.com/</span>
       <%= form.text_field :url, class: "form-control" %>
     </div>
-  <div>
+  </div>
+  
+  <div class="mt-3">
     <%= form.submit 'Create', class: "btn btn-outline-success" %>
   </div>
 <% end %>
