--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -7,5 +7,5 @@
   <%= link_to "Back to profiles", profiles_path %>
 
   <%= button_to "Destroy this profile", @profile, method: :delete %>
-  <%= link_to "ReScan", rescan_path(profile_id: @profile.id), method: :put %>
+  <%= button_to "ReScan", rescan_path(profile_id: @profile.id), method: :put %>
 </div>
