--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -20,10 +20,10 @@
     <label for="basic-url" class="form-label">Your GitHub URL</label>
     <div class="input-group">
       <span class="input-group-text" id="basic-addon3">https://github.com/</span>
-      <%= form.text_field :url, class: "form-control" %>
+      <%= form.text_field :url, class: "form-control", value: (profile&.url&.split('https://github.com/')&.last) %>
     </div>
   </div>
-  
+
   <div class="mt-3">
     <%= form.submit 'Create', class: "btn btn-outline-success" %>
   </div>
