--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -4,11 +4,16 @@
 
 <div id="profiles">
   <% @profiles.each do |profile| %>
-    <%= render profile %>
     <p>
-      <%= link_to "Show this profile", profile %>
+      Name: <%= profile.name %>
+    </p>
+
+    <p>
+      URL: <%= profile.url %>
+    </p>
+
+    <p>
+      <%= link_to "Show this profile", profile, class: "btn btn-outline-info" %>
     </p>
   <% end %>
 </div>
-
-<%= link_to "New profile", new_profile_path %>
